--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,4 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Imports: data.table, tidyverse, beepr, UKFE
+Imports: data.table, ggplot2, beepr, UKFE
