--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,10 @@ S3method(LKur,HydroAMAX)
 S3method(LKur,HydroAggsmax)
 S3method(LKur,flowLoad)
 S3method(LKur,numeric)
+S3method(LSKEW,HydroAMAX)
+S3method(LSKEW,HydroAggsmax)
+S3method(LSKEW,flowLoad)
+S3method(LSKEW,numeric)
 S3method(QMED,HydroAMAX)
 S3method(QMED,HydroAggsmax)
 S3method(QMED,flowLoad)
@@ -45,6 +49,8 @@ S3method(getAMAX,HydroAggsmax)
 S3method(getAMAX,flowLoad)
 S3method(getAMAX,numeric)
 S3method(getAMAX,zoo)
+S3method(monthPlot,HydroAggs)
+S3method(monthPlot,flowLoad)
 S3method(plotNA,rainAll)
 S3method(plotQA,cumulRain)
 S3method(plotQA,rainAll)
@@ -58,6 +64,7 @@ S3method(print,L4)
 S3method(print,LCA)
 S3method(print,LComponents)
 S3method(print,LKur)
+S3method(print,LSkew)
 S3method(print,Lcv)
 S3method(print,QMED)
 S3method(urbAdj,LSkew)
@@ -73,15 +80,28 @@ export(LCA)
 export(LCV)
 export(LComponents)
 export(LKur)
+export(LSKEW)
 export(Ls)
+export(MAE)
+export(MAEP)
 export(QMED)
+export(R2)
+export(RMSE)
+export(RMSEP)
 export(csvFix)
 export(cumsumNA)
+export(funs)
 export(getAMAX)
+export(getCoords)
+export(loadWISKI)
 export(mergeData)
+export(monthPlot)
 export(plotNA)
 export(plotQA)
 export(plotQMED)
+export(prod1)
+export(sum1)
+export(teeSun)
 export(urbAdj)
 export(window)
 export(zataTable)
