--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,10 @@ S3method(getAMAX,HydroAggsmax)
 S3method(getAMAX,flowLoad)
 S3method(getAMAX,numeric)
 S3method(getAMAX,zoo)
+S3method(hourlyAgg,flowLoad)
+S3method(hourlyAgg,rainAll)
+S3method(hourlyAgg,rainLoad)
+S3method(hourlyAgg,stageLoad)
 S3method(monthPlot,HydroAggs)
 S3method(monthPlot,flowLoad)
 S3method(plotNA,rainAll)
@@ -93,6 +97,7 @@ export(cumsumNA)
 export(funs)
 export(getAMAX)
 export(getCoords)
+export(hourlyAgg)
 export(loadWISKI)
 export(mergeData)
 export(monthPlot)
