--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: HydroEnR
+Type: Package
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
     person("Jonathan", "Payne", , "jon.payne@environment-agency.gov.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2551-5353"))
-Description: What the package does (one paragraph).
+Description: HydroEnR streamlines a lot of the data input and management for EDA prior to model development.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Imports: data.table, ggplot2, beepr, UKFE
+Imports: data.table, ggplot2, beepr, UKFE, sf, leaflet, dygraphs
