--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ S3method(window,rainAll)
 S3method(window,rainAllDaily)
 S3method(zataTable,zoo)
 export(Estimates)
+export(HydroYearDay)
 export(L1)
 export(L2)
 export(L3)
