--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,3 +139,8 @@ export(teeSun)
 export(urbAdj)
 export(window)
 export(zataTable)
+import(RcppRoll)
+import(beepr)
+import(data.table)
+import(ggplot2)
+import(magrittr)
