--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: data.table, ggplot2, beepr, RcppRoll, UKFE, sf, leaflet, dygraphs
+Suggests: 
+    rmarkdown,
+    knitr
+VignetteBuilder: knitr
