--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,42 +8,52 @@ S3method(L1,HydroAMAX)
 S3method(L1,HydroAggsmax)
 S3method(L1,flowLoad)
 S3method(L1,numeric)
+S3method(L1,zoo)
 S3method(L2,HydroAMAX)
 S3method(L2,HydroAggsmax)
 S3method(L2,flowLoad)
 S3method(L2,numeric)
+S3method(L2,zoo)
 S3method(L3,HydroAMAX)
 S3method(L3,HydroAggsmax)
 S3method(L3,flowLoad)
 S3method(L3,numeric)
+S3method(L3,zoo)
 S3method(L4,HydroAMAX)
 S3method(L4,HydroAggsmax)
 S3method(L4,fowLoad)
 S3method(L4,numeric)
+S3method(L4,zoo)
 S3method(LCA,HydroAMAX)
 S3method(LCA,HydroAggsmax)
 S3method(LCA,flowLoad)
 S3method(LCA,numeric)
+S3method(LCA,zoo)
 S3method(LCV,HydroAMAX)
 S3method(LCV,HydroAggsmax)
 S3method(LCV,flowLoad)
 S3method(LCV,numeric)
+S3method(LCV,zoo)
 S3method(LComponents,HydroAMAX)
 S3method(LComponents,HydroAggsmax)
 S3method(LComponents,flowLoad)
 S3method(LComponents,numeric)
+S3method(LComponents,zoo)
 S3method(LKur,HydroAMAX)
 S3method(LKur,HydroAggsmax)
 S3method(LKur,flowLoad)
 S3method(LKur,numeric)
+S3method(LKur,zoo)
 S3method(LSKEW,HydroAMAX)
 S3method(LSKEW,HydroAggsmax)
 S3method(LSKEW,flowLoad)
 S3method(LSKEW,numeric)
+S3method(LSKEW,zoo)
 S3method(QMED,HydroAMAX)
 S3method(QMED,HydroAggsmax)
 S3method(QMED,flowLoad)
 S3method(QMED,numeric)
+S3method(QMED,zoo)
 S3method(annualAgg,flowLoad)
 S3method(annualAgg,rainAll)
 S3method(annualAgg,rainLoad)
