--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,8 +105,11 @@ S3method(rollingAggs,rainLoad)
 S3method(rollingAggs,stageLoad)
 S3method(urbAdj,LSkew)
 S3method(urbAdj,Lcv)
+S3method(window,flowLoad)
 S3method(window,rainAll)
 S3method(window,rainAllDaily)
+S3method(window,rainLoad)
+S3method(window,stageLoad)
 S3method(zataTable,zoo)
 export(Estimates)
 export(HydroYearDay)
@@ -139,6 +142,7 @@ export(loadWISKI)
 export(mergeData)
 export(monthPlot)
 export(monthlyAgg)
+export(peakDet)
 export(plotNA)
 export(plotQA)
 export(plotQMED)
