Added metCollate() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ export(hourlyAgg)
 export(hydroYearAgg)
 export(loadWISKI)
 export(mergeData)
+export(metaCollate)
 export(monthPlot)
 export(monthlyAgg)
 export(peakDet)
@@ -158,3 +159,5 @@ import(data.table)
 import(ggplot2)
 import(magrittr)
 import(rnrfa)
+import(s2)
+import(sf)
