Adding ARMAp shiny app

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,7 +133,6 @@ export(annualAgg)
 export(csvFix)
 export(cumsumNA)
 export(dailyAgg)
-export(funs)
 export(getAMAX)
 export(getCoords)
 export(hourlyAgg)
@@ -147,9 +146,8 @@ export(peakDet)
 export(plotNA)
 export(plotQA)
 export(plotQMED)
-export(prod1)
 export(rollingAggs)
-export(sum1)
+export(runARMAp)
 export(teeSun)
 export(urbAdj)
 export(zataTable)
