--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
     person("Jonathan", "Payne", , "jon.payne@environment-agency.gov.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2551-5353"))
 Description: HydroEnR streamlines a lot of the data input and management for EDA prior to model development.
-License: MIT + file LICENSE
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
@@ -18,6 +18,7 @@ Imports:
     UKFE,
     sf,
     leaflet,
+    htmltools,
     dygraphs,
     Rcpp,
     shiny
@@ -26,4 +27,6 @@ Suggests:
     knitr
 VignetteBuilder: knitr
 LinkingTo: 
+    cpp11,
     Rcpp
+SystemRequirements: C++11
