Addition of new merged rainfall functions and Thiessen mapping. All dependencies updated.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,10 +133,12 @@ export(annualAgg)
 export(csvFix)
 export(cumsumNA)
 export(dailyAgg)
+export(gaugeProp)
 export(getAMAX)
 export(getCoords)
 export(hourlyAgg)
 export(hydroYearAgg)
+export(intersectPoly)
 export(loadWISKI)
 export(mergeData)
 export(metaCollate)
@@ -146,9 +148,11 @@ export(peakDet)
 export(plotNA)
 export(plotQA)
 export(plotQMED)
+export(rainAvg)
 export(rollingAggs)
 export(runARMAp)
 export(teeSun)
+export(teesunPlot)
 export(urbAdj)
 export(zataTable)
 import(RcppRoll)
