--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,8 +137,10 @@ export(gaugeProp)
 export(getAMAX)
 export(getCoords)
 export(hourlyAgg)
+export(hydroAggregate)
 export(hydroYearAgg)
 export(intersectPoly)
+export(loadPE)
 export(loadWISKI)
 export(mergeData)
 export(metaCollate)
