--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,7 @@ export(annualAgg)
 export(csvFix)
 export(cumsumNA)
 export(dailyAgg)
+export(find_peaks)
 export(gaugeProp)
 export(getAMAX)
 export(getCoords)
@@ -165,3 +166,4 @@ import(magrittr)
 import(rnrfa)
 import(s2)
 import(sf)
+importFrom(Rcpp,sourceCpp)
