Updating C++ functions so they can be called by R

--- a/backup/NAMESPACE
+++ b/backup/NAMESPACE
@@ -133,7 +133,6 @@ export(annualAgg)
 export(csvFix)
 export(cumsumNA)
 export(dailyAgg)
-export(findPeaksCPP)
 export(find_peaks)
 export(gaugeProp)
 export(getAMAX)
@@ -167,4 +166,4 @@ import(magrittr)
 import(rnrfa)
 import(s2)
 import(sf)
-importFrom(Rcpp,sourceCpp)
+importFrom(Rcpp, evalCpp)
