--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,7 @@ export(annualAgg)
 export(csvFix)
 export(cumsumNA)
 export(dailyAgg)
+export(fetchCDs)
 export(findPeaksCPP)
 export(find_peaks)
 export(gaugeProp)
@@ -144,6 +145,7 @@ export(hydroAggregate)
 export(hydroYearAgg)
 export(intersectPoly)
 export(loadPE)
+export(loadPeakCDs)
 export(loadWISKI)
 export(mergeData)
 export(metaCollate)
@@ -158,8 +160,10 @@ export(rollingAggs)
 export(runARMAp)
 export(teeSun)
 export(teesunPlot)
+export(uploadPeakFlow)
 export(urbAdj)
 export(zataTable)
+exportClasses(CD)
 import(RcppRoll)
 import(beepr)
 import(data.table)
@@ -169,3 +173,7 @@ import(rnrfa)
 import(s2)
 import(sf)
 importFrom(Rcpp,sourceCpp)
+useDynLib(HydroEnR)
+exportPattern("ˆ[[:alpha:]]+")
+importFrom(Rcpp, evalCpp)
+
