--- a/NAMESPACE
+++ b/NAMESPACE
@@ -173,7 +173,5 @@ import(rnrfa)
 import(s2)
 import(sf)
 importFrom(Rcpp,sourceCpp)
-useDynLib(HdroEnR)
-exportPattern("ˆ[[:alpha:]]+")
-importFrom(Rcpp, evalCpp)
+useDynLib(HydroEnR); exportPattern("ˆ[[:alpha:]]+"); importFrom(Rcpp, evalCpp)
 
