--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ S3method(L3,numeric)
 S3method(L3,zoo)
 S3method(L4,HydroAMAX)
 S3method(L4,HydroAggsmax)
-S3method(L4,fowLoad)
+S3method(L4,flowLoad)
 S3method(L4,numeric)
 S3method(L4,zoo)
 S3method(LCA,HydroAMAX)
@@ -58,6 +58,8 @@ S3method(annualAgg,flowLoad)
 S3method(annualAgg,rainAll)
 S3method(annualAgg,rainLoad)
 S3method(annualAgg,stageLoad)
+S3method(asVol,flowLoad)
+S3method(asVol,rainLoad)
 S3method(cumsumNA,numeric)
 S3method(cumsumNA,rainAll)
 S3method(cumsumNA,rainAllAnnual)
@@ -112,6 +114,10 @@ S3method(window,rainLoad)
 S3method(window,stageLoad)
 S3method(zataTable,zoo)
 export(Estimates)
+export(GEVGF)
+export(GenLogGF)
+export(GenParetoGF)
+export(GumbelGF)
 export(HydroYearDay)
 export(L1)
 export(L2)
@@ -131,15 +137,17 @@ export(R2)
 export(RMSE)
 export(RMSEP)
 export(annualAgg)
+export(asVol)
 export(csvFix)
 export(cumsumNA)
 export(dailyAgg)
 export(fetchCDs)
+export(findPeaks)
 export(findPeaksCPP)
-export(find_peaks)
 export(gaugeProp)
 export(getAMAX)
 export(getCoords)
+export(growthBactors)
 export(hourlyAgg)
 export(hydroAggregate)
 export(hydroYearAgg)
@@ -165,7 +173,6 @@ export(urbAdj)
 export(zataTable)
 exportClasses(CD)
 import(RcppRoll)
-import(beepr)
 import(data.table)
 import(ggplot2)
 import(magrittr)
