Improving single site analyses

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,10 @@ S3method(plotQA,rainAll)
 S3method(plotQA,rainAllAnnual)
 S3method(plotQA,rainAllDaily)
 S3method(plotQA,rainAllMonthly)
+S3method(print,GEVPar)
+S3method(print,GenLogPar)
+S3method(print,GenParetoPar)
+S3method(print,GumbelPar)
 S3method(print,L1)
 S3method(print,L2)
 S3method(print,L3)
@@ -115,9 +119,13 @@ S3method(window,stageLoad)
 S3method(zataTable,zoo)
 export(Estimates)
 export(GEVGF)
+export(GEVParams)
 export(GenLogGF)
+export(GenLogParams)
 export(GenParetoGF)
+export(GenParetoParams)
 export(GumbelGF)
+export(GumbelParams)
 export(HydroYearDay)
 export(L1)
 export(L2)
@@ -132,6 +140,7 @@ export(Ls)
 export(MAE)
 export(MAEP)
 export(PDM)
+export(Params)
 export(QMED)
 export(R2)
 export(RMSE)
@@ -147,7 +156,7 @@ export(findPeaksCPP)
 export(gaugeProp)
 export(getAMAX)
 export(getCoords)
-export(growthBactors)
+export(growthFactors)
 export(hourlyAgg)
 export(hydroAggregate)
 export(hydroYearAgg)
