Volume based updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,46 +6,55 @@ S3method(Estimates,GenParetoPar)
 S3method(Estimates,GumbelPar)
 S3method(L1,HydroAMAX)
 S3method(L1,HydroAggsmax)
+S3method(L1,HydroVAMAX)
 S3method(L1,flowLoad)
 S3method(L1,numeric)
 S3method(L1,zoo)
 S3method(L2,HydroAMAX)
 S3method(L2,HydroAggsmax)
+S3method(L2,HydroVAMAX)
 S3method(L2,flowLoad)
 S3method(L2,numeric)
 S3method(L2,zoo)
 S3method(L3,HydroAMAX)
 S3method(L3,HydroAggsmax)
+S3method(L3,HydroVAMAX)
 S3method(L3,flowLoad)
 S3method(L3,numeric)
 S3method(L3,zoo)
 S3method(L4,HydroAMAX)
 S3method(L4,HydroAggsmax)
+S3method(L4,HydroVAMAX)
 S3method(L4,flowLoad)
 S3method(L4,numeric)
 S3method(L4,zoo)
 S3method(LCA,HydroAMAX)
 S3method(LCA,HydroAggsmax)
+S3method(LCA,HydroVAMAX)
 S3method(LCA,flowLoad)
 S3method(LCA,numeric)
 S3method(LCA,zoo)
 S3method(LCV,HydroAMAX)
 S3method(LCV,HydroAggsmax)
+S3method(LCV,HydroVAMAX)
 S3method(LCV,flowLoad)
 S3method(LCV,numeric)
 S3method(LCV,zoo)
 S3method(LComponents,HydroAMAX)
 S3method(LComponents,HydroAggsmax)
+S3method(LComponents,HydroVAMAX)
 S3method(LComponents,flowLoad)
 S3method(LComponents,numeric)
 S3method(LComponents,zoo)
 S3method(LKur,HydroAMAX)
 S3method(LKur,HydroAggsmax)
+S3method(LKur,HydroVAMAX)
 S3method(LKur,flowLoad)
 S3method(LKur,numeric)
 S3method(LKur,zoo)
 S3method(LSKEW,HydroAMAX)
 S3method(LSKEW,HydroAggsmax)
+S3method(LSKEW,HydroVAMAX)
 S3method(LSKEW,flowLoad)
 S3method(LSKEW,numeric)
 S3method(LSKEW,zoo)
@@ -54,6 +63,10 @@ S3method(QMED,HydroAggsmax)
 S3method(QMED,flowLoad)
 S3method(QMED,numeric)
 S3method(QMED,zoo)
+S3method(VMED,HydroAggssum)
+S3method(VMED,HydroVAMAX)
+S3method(VMED,flowLoad)
+S3method(VMED,numeric)
 S3method(annualAgg,flowLoad)
 S3method(annualAgg,rainAll)
 S3method(annualAgg,rainLoad)
@@ -73,6 +86,8 @@ S3method(getAMAX,HydroAggsmax)
 S3method(getAMAX,flowLoad)
 S3method(getAMAX,numeric)
 S3method(getAMAX,zoo)
+S3method(getVAMAX,HydroAggssum)
+S3method(getVAMAX,flowLoad)
 S3method(hourlyAgg,flowLoad)
 S3method(hourlyAgg,rainAll)
 S3method(hourlyAgg,rainLoad)
@@ -118,13 +133,9 @@ S3method(window,rainLoad)
 S3method(window,stageLoad)
 S3method(zataTable,zoo)
 export(Estimates)
-export(GEVGF)
 export(GEVParams)
-export(GenLogGF)
 export(GenLogParams)
-export(GenParetoGF)
 export(GenParetoParams)
-export(GumbelGF)
 export(GumbelParams)
 export(HydroYearDay)
 export(L1)
@@ -145,6 +156,7 @@ export(QMED)
 export(R2)
 export(RMSE)
 export(RMSEP)
+export(VMED)
 export(annualAgg)
 export(asVol)
 export(csvFix)
@@ -156,7 +168,12 @@ export(findPeaksCPP)
 export(gaugeProp)
 export(getAMAX)
 export(getCoords)
+export(getVAMAX)
 export(growthFactors)
+export(growthGEV)
+export(growthGenLog)
+export(growthGenPareto)
+export(growthGumbel)
 export(hourlyAgg)
 export(hydroAggregate)
 export(hydroYearAgg)
@@ -169,6 +186,7 @@ export(metaCollate)
 export(monthPlot)
 export(monthlyAgg)
 export(peakDet)
+export(plotExtVal)
 export(plotNA)
 export(plotQA)
 export(plotQMED)
@@ -179,6 +197,7 @@ export(teeSun)
 export(teesunPlot)
 export(uploadPeakFlow)
 export(urbAdj)
+export(vLs)
 export(zataTable)
 exportClasses(CD)
 import(RcppRoll)
