Volume based methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,10 @@ S3method(getAMAX,numeric)
 S3method(getAMAX,zoo)
 S3method(getVAMAX,HydroAggssum)
 S3method(getVAMAX,flowLoad)
+S3method(growthVolGEV,vLs)
+S3method(growthVolGenLog,vLs)
+S3method(growthVolGenPareto,vLs)
+S3method(growthVolGumbel,vLs)
 S3method(hourlyAgg,flowLoad)
 S3method(hourlyAgg,rainAll)
 S3method(hourlyAgg,rainLoad)
@@ -117,6 +121,7 @@ S3method(print,L3)
 S3method(print,L4)
 S3method(print,LCA)
 S3method(print,LComponents)
+S3method(print,LCs)
 S3method(print,LKur)
 S3method(print,LSkew)
 S3method(print,Lcv)
@@ -174,6 +179,11 @@ export(growthGEV)
 export(growthGenLog)
 export(growthGenPareto)
 export(growthGumbel)
+export(growthVolFactors)
+export(growthVolGEV)
+export(growthVolGenLog)
+export(growthVolGenPareto)
+export(growthVolGumbel)
 export(hourlyAgg)
 export(hydroAggregate)
 export(hydroYearAgg)
@@ -187,6 +197,7 @@ export(monthPlot)
 export(monthlyAgg)
 export(peakDet)
 export(plotExtVal)
+export(plotExtVol)
 export(plotNA)
 export(plotQA)
 export(plotQMED)
