Update and tidy up

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(Estimates,GEVPar)
 S3method(Estimates,GenLogPar)
 S3method(Estimates,GenParetoPar)
 S3method(Estimates,GumbelPar)
+S3method(Estimates,volGEVPar)
 S3method(L1,HydroAMAX)
 S3method(L1,HydroAggsmax)
 S3method(L1,HydroVAMAX)
@@ -131,6 +132,10 @@ S3method(rollingAggs,rainLoad)
 S3method(rollingAggs,stageLoad)
 S3method(urbAdj,LSkew)
 S3method(urbAdj,Lcv)
+S3method(volGEVParams,vLs)
+S3method(volGenLogParams,vLs)
+S3method(volGenParetoParams,vLs)
+S3method(volGumbelParams,vLs)
 S3method(window,flowLoad)
 S3method(window,rainAll)
 S3method(window,rainAllDaily)
@@ -209,6 +214,11 @@ export(teesunPlot)
 export(uploadPeakFlow)
 export(urbAdj)
 export(vLs)
+export(volGEVParams)
+export(volGenLogParams)
+export(volGenParetoParams)
+export(volGumbelParams)
+export(volParams)
 export(zataTable)
 exportClasses(CD)
 import(RcppRoll)
