--- a/NAMESPACE
+++ b/NAMESPACE
@@ -190,6 +190,7 @@ export(growthVolGenLog)
 export(growthVolGenPareto)
 export(growthVolGumbel)
 export(hourlyAgg)
+export(hydroAPI)
 export(hydroAggregate)
 export(hydroYearAgg)
 export(intersectPoly)
@@ -207,6 +208,7 @@ export(plotNA)
 export(plotQA)
 export(plotQMED)
 export(rainAvg)
+export(rateFlow)
 export(rollingAggs)
 export(runARMAp)
 export(teeSun)
