Updating package dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -226,6 +226,7 @@ exportClasses(CD)
 import(RcppRoll)
 import(data.table)
 import(ggplot2)
+import(jsonlite)
 import(magrittr)
 import(rnrfa)
 import(s2)
