Various updates to package, relates primarily to rating

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -126,6 +126,7 @@ S3method(print,LCs)
 S3method(print,LKur)
 S3method(print,LSkew)
 S3method(print,Lcv)
+S3method(print,OptRating)
 S3method(print,QMED)
 S3method(rollingAggs,flowLoad)
 S3method(rollingAggs,rainLoad)
@@ -209,6 +210,8 @@ export(plotQA)
 export(plotQMED)
 export(rainAvg)
 export(rateFlow)
+export(rateOptimise)
+export(ratingPlot)
 export(rollingAggs)
 export(runARMAp)
 export(teeSun)
