--- a/NAMESPACE
+++ b/NAMESPACE
@@ -234,6 +234,7 @@ import(magrittr)
 import(rnrfa)
 import(s2)
 import(sf)
+import(minpack.lm)
 importFrom(Rcpp,sourceCpp)
 useDynLib(HydroEnR); exportPattern("ˆ[[:alpha:]]+"); importFrom(Rcpp, evalCpp)
 
