Adding the HMA function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ export(GEVParams)
 export(GenLogParams)
 export(GenParetoParams)
 export(GumbelParams)
+export(HMA)
 export(HydroYearDay)
 export(L1)
 export(L2)
